--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-test_app/fastlane/Fastfile.java filter=git-crypt diff=git-crypt
-test_app/fastlane/Appfile.java filter=git-crypt diff=git-crypt
+fastlane/Fastfile.java filter=git-crypt diff=git-crypt
+fastlane/Appfile.java filter=git-crypt diff=git-crypt
