--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 fastlane/Fastfile filter=git-crypt diff=git-crypt
 fastlane/Appfile filter=git-crypt diff=git-crypt
+fastlane/TestFile filter=git-crypt diff=git-crypt
