--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 *.iml
 .gradle
-#/local.properties
+/local.properties
 .DS_Store
 /build
 /captures
 .externalNativeBuild
 .cxx
-#/local.properties
+
 
 .idea/
